# ada-events

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  package.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
ada_events/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
docs/: api-reference.md  deployment.md  development.md  google-oauth.md  user-guide.md
docs/plans/: 2026-03-08-ada-events-platform-plan.md
events/: admin.py  conftest.py  context_processors.py  forms.py  managers.py  models.py  notifications.py  rate_limit.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py
events/management/commands/: schedule_reminders.py  seed_categories.py  seed_test_data.py  send_event_reminders.py
events/migrations/: 0001_initial.py  0002_initial.py  0003_soft_delete_and_uuid_attachments.py
events/templates/events/: event_create.html  event_detail.html  event_edit.html  event_list.html  home.html  past_events.html
nginx/: nginx.conf
requirements/: base.txt  dev.txt
static/css/: output.css
static/js/: auth-fields.js
static/src/: input.css
templates/: base.html
templates/account/: email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
users/: admin.py  conftest.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+7 files in other folders)
